compiler/tools/fpp-check/test/invalid_symbols/constant_as_qualifier.fpp
constant a = 0
constant b = a.c
